# muRLi

./: .gitignore  3D2P.json  README.md  filter_test.py  muRLi.3mf  platformio.ini  states.drawio  test.txt  writeMod.py
cad/: Mod.f3d  muRLi.f3z  muRLiN.f3d
circuit/: murRLi-Veroboard.diy
circuit/kicad/: MOD-cache.lib  MOD.sch  muRLi-cache.lib  muRLi.dcm  muRLi.lib  muRLi.sch  muRLi.sch-bak  sym-lib-table
lib/duktape/: configure.bat  duk_config.h  duktape.c
lib/tinyscript/: tinyscript.c  tinyscript.h
lib/websockets/src/: WebSockets.h
mods/: muRLiN 1 MOD.murli  simple.murli  snake.murli  writeMod.py
src/: main.cpp  muRLi.code-workspace
src/api/: CMakeLists.txt
src/api/src/: frequency_analyzer.cpp  frequency_analyzer.hpp  murli_api.cpp  murli_api.hpp  websocket.cpp  websocket.hpp
src/bindings/: murliApi.cs
src/desktop/: CMakeLists-ixWebsocket.txt  CMakeLists-rtAudio.txt  CMakeLists-toml11.txt  CMakeLists-zLib.txt  CMakeLists.txt  conanfile.txt  config.toml
src/desktop/src/: frequency_analyzer.cpp  frequency_analyzer.hpp  main.cpp  murli_desktop.cpp  murli_desktop.hpp  websocket.cpp  websocket.hpp
src/display/: centeredTextView.cpp  display.cpp  display.hpp  insert_mod_view.cpp  invalid_mod_view.cpp  moduleView.cpp  read_mod_view.cpp  result_view.cpp  run_mod_view.cpp  splashView.cpp  splash_view.cpp  view.hpp  write_mod_view.cpp
src/display/views/: icon_text_view.cpp  insert_mod_view.cpp  invalid_mod_view.cpp  read_mod_view.cpp  result_view.cpp  run_mod_view.cpp  write_mod_view.cpp
src/firmware/: platformio.ini
src/firmware/src/: main.cpp  shared.hpp
src/firmware/src/display/: display.hpp
src/firmware/src/display/views/: run_mod_view.cpp  splash_view.cpp
src/firmware/src/hardware/display/: display.cpp  view.hpp
src/firmware/src/hardware/led/: led.cpp
src/firmware/src/hardware/rom/: rom_24LC32A.hpp
src/firmware/src/led/: led_pattern.hpp
src/firmware/src/mesh/: murli_mesh.cpp
src/firmware/src/murli/: murliN_context.cpp  murliN_context.hpp  murli_context.cpp  murli_context.hpp  state.hpp
src/firmware/src/murli/states/: broadcast_mod_state.cpp  invalid_mod_state.cpp  no_mod_state.cpp  read_mod_state.cpp  receive_length_state.cpp  receive_mod_state.cpp  run_mod_state.cpp  write_mod_state.cpp  write_result_state.cpp
src/firmware/src/network/mesh/: murli_mesh.cpp  murli_mesh.hpp
src/firmware/src/network/webserver/: murli_web.hpp
src/firmware/src/network/websocket/: event_registration.hpp  socket_client.cpp  socket_client.hpp  socket_server.cpp
src/firmware/src/rom/: rom_24LC32A.cpp
src/firmware/src/views/: icon_text_view.cpp  insert_mod_view.cpp  run_mod_view.cpp  splash_view.cpp
src/firmware/src/visualization/: frequency_analyzer.cpp  frequency_analyzer.hpp  frequency_include.hpp  mjs_funcs.hpp  script_context.cpp  script_context.hpp
src/firmware/src/webserver/: murli_web.cpp
src/firmware/src/webserver/pages/: index.h
src/firmware/src/websocket/: socket_client.cpp  socket_client.hpp  socket_server.cpp  socket_server.hpp
src/firmware/src/websocket/commands/: client_commands.hpp
src/led/: color.hpp  led.cpp  led.hpp
src/led/patterns/: led_blink_pattern.cpp  led_fade_pattern.cpp
src/mesh/: murli_mesh.hpp
src/murli/: murliN_context.cpp  murliN_context.hpp  murli_context.cpp  murli_context.hpp  state.hpp
src/murli/states/: broadcast_mod_state.cpp  invalid_mod_state.cpp  no_mod_state.cpp  read_mod_state.cpp  receive_length_state.cpp  receive_mod_state.cpp  receive_write_state.cpp  run_mod_state.cpp  write_mod_state.cpp  write_result_state.cpp
src/rom/: mod_control.cpp  mod_control.hpp  rom_24LC32A.cpp  rom_24LC32A.hpp
src/states/: invalid_mod_state.cpp  no_mod_state.cpp  read_mod_state.cpp  receive_length_state.cpp  receive_mod_state.cpp  receive_write_state.cpp  state.hpp  write_mod_state.cpp
src/visualization/: frequency_analyzer.cpp  frequency_analyzer.hpp  mjs_funcs.hpp  script_context.cpp  script_context.hpp  sound_visualization.cpp  sound_visualization.hpp
src/websocket/: client_commands.hpp  murli_command.hpp  server_commands.hpp  socket_client.cpp  socket_client.hpp  socket_server.cpp  socket_server.hpp
src/wifi/: murli_mesh.cpp  murli_wifi.cpp  murli_wifi.hpp
stl/: 1x Bottom.stl  1x Frame.stl  1x Top.stl  2x Divider.stl  Mod Top.stl
stl/MOD/: Mod Bottom.stl
stl/muRLiN/: Middle.stl  Top.stl
(+3 files in other folders)
